# Blog-Website-Using-Flask

./: LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt  sqlsata.sql  test.sql
templates/: about.html  contact.html  dashboard.html  edit.html  index.html  layout.html  login.html  post.html
