[tool.poetry]
name = "blog-website-using-flask"
version = "0.1.0"
description = ""
authors = ["TierGamerpy <adityabhushan934@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask = "^2.0.1"
Werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
